--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
       <form id="leap-year">
         <div class="form-group">
-          <label for="year">Enter a year and find out if it's a leap year:</label>
-          <input id="year" type="text">
+          <label for="sentence">Enter a year and find out if it's a leap year:</label>
+          <input id="sentence" type="text">
         </div>
 
         <button type="submit" class="btn btn-outline-dark">Find out!</button>
@@ -23,7 +23,7 @@
       <br>
 
       <div id="result">
-        <p><span class="year"></span> is <span class="not"></span> a leap year.</p>
+        <p><span class="year"></span></p>
       </div>
     </div>
   </body>
