--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <script src="js/jquery-3.3.1.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
-    <title>Leap year detector</title>
+    <title>Ping Pong</title>
   </head>
   <body>
     <div class="container">
-      <h1>Leap year detector</h1>
+      <h1>Ping Pong Game Logic Thing</h1>
 
       <form id="leap-year">
         <div class="form-group">
-          <label for="sentence">Enter a year and find out if it's a leap year:</label>
-          <input id="sentence" type="text">
+          <label for="number">Enter a number and I'll count up to it using my Ping Popng function:</label>
+          <input id="number" type="text">
         </div>
 
         <button type="submit" class="btn btn-outline-dark">Find out!</button>
