logic now runs flawlessly

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
       </form>
       <br>
 
-      <div id="result">
-        <p><span class="year"></span></p>
+      <div id="output">
+         <ul class="year">
+
+         </ul>
       </div>
     </div>
   </body>
