--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <form id="leap-year">
         <div class="form-group">
-          <label for="number">Enter a number and I'll count up to it using my Ping Popng function:</label>
+          <label for="number">Enter a number and I'll count up to it using my Ping Pong function:</label>
           <input id="number" type="text">
         </div>
 
@@ -22,8 +22,8 @@
       </form>
       <br>
 
-      <div id="output">
-         <ul class="year">
+      <div id="result">
+         <ul class="output">
 
          </ul>
       </div>
