just wanna commit before I fuck with the html/css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <input id="number" type="text">
         </div>
 
-        <button type="submit" class="btn btn-outline-dark">Find out!</button>
+        <button type="submit" class="btn btn-outline-dark">Ping Pong!</button>
       </form>
       <br>
 
